cuda-vector-add.yml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-vector-add
  namespace: ktest 
spec:
  restartPolicy: OnFailure
  nodeSelector:
    node-role.kubernetes.io/nvidia: "true"
  containers:
    - name: cuda-vector-add
      image: "docker.io/mirrorgooglecontainers/cuda-vector-add:v0.1"
      serviceAccount: gpu
      serviceAccountName: gpu
      securityContext:
        seLinuxOptions:
          type: nvidia_container_t
