gpu.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
  name: cuda-vector-add
  namespace: ktest
spec:
  replicas: 1
  selector:
    app: cuda-vector-add
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
      labels:
        app: cuda-vector-add
    spec:
      containers:
      - args:
        - "60"
        command:
        - /bin/bash
        image: mirrorgooglecontainers/cuda-vector-add:v0.1
        imagePullPolicy: IfNotPresent
        name: cuda-vector-add
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/nvidia: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seLinuxOptions:
          type: nvidia_container_t
      serviceAccount: gpu
      serviceAccountName: gpu
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
