wekan.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wekan
  namespace: wekan
  labels:
    app: wekan
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: wekan
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wekan
  namespace: wekan
  labels:
    app: wekan
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wekan
  template:
    metadata:
      labels:
        app: wekan
    spec:
      containers:
      - image: quay.io/wekan/wekan:v1.78
        name: wekan
        ports:
        - containerPort: 8080
          name: wekan
