code-server.yml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---
apiVersion: v1
kind: Service
metadata:
 name: code-server
 namespace: code-server
spec:
 ports:
 - port: 80
   targetPort: 8080
 selector:
   app: code-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - env:
        - name: PASSWORD
          valueFrom:
            secretKeyRef:
              name: code-server
              key: password
        image: codercom/code-server:latest
        imagePullPolicy: Always
        name: code-server
        volumeMounts:
        - mountPath: /home/coder
          name: coder
      volumes:
      - name: coder
        persistentVolumeClaim:
          claimName: code-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "kubernetes.example.com"
    http:
      paths:
      - path: /codeserver
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 80
